--- a/templates/pseudonym.html
+++ b/templates/pseudonym.html
@@ -4,6 +4,7 @@
     <title>Recurse Center Pseudonyms</title>
     <!-- Normalize -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width initial-scale=1" />
     <!-- Styles -->
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"></head>
 </head>
