--- a/templates/pseudonym.html
+++ b/templates/pseudonym.html
@@ -45,9 +45,14 @@
         </div>
         {% endfor %}
     </div>
+    <footer>
+        <div class="container">
+            <p>Made by Sher Minn with &lt;3 at RC. <a href="https://github.com/piratefsh/rc-pseudonyms" target="_blank">Github repo here</a>.</p>
+            </p>
+        </div>
+    </footer>
 
     <!-- Scripts -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-
 </body>
 </html>
