--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,18 @@ header > div:nth-child(2) {
     flex: 1;
 }
 
+footer{
+    position: fixed;
+    bottom: 0px;
+    background-color: rgba(255,255,255,0.9);
+    width: 100%;
+    font-size: 0.7em;
+}
+
+footer p {
+    margin: 10px 0px;
+}
+
 .container {
     max-width: 900px;
     margin: 0 auto;
